--- a/android/radio/res/layout/main.xml
+++ b/android/radio/res/layout/main.xml
@@ -6,9 +6,11 @@
   android:layout_height="fill_parent"
   >
 
-  <TextView
+  <Button
+    android:id="@+id/button_selectProgram"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="@string/app_name"
+    android:onClick="selectProgram"
+    android:text=""
    />
 </LinearLayout>
