--- a/android/radio/res/values/programs.xml
+++ b/android/radio/res/values/programs.xml
@@ -2,10 +2,10 @@
 
 <resources>
   <string-array name="programs">
-    <item>Anthems</item>
-    <item>Bands</item>
-    <item>Christian</item>
-    <item>Hourly</item>
-    <item>Portraits</item>
+    <item>Christian Music</item>
+    <item>Guy Lombardo</item>
+    <item>Hourly Announcements</item>
+    <item>Musical Portraits</item>
+    <item>National Anthems</item>
   </string-array>
 </resources>
