Implement the Play/Pause button.

--- a/android/radio/res/layout/main.xml
+++ b/android/radio/res/layout/main.xml
@@ -51,6 +51,7 @@
            />
 
           <Button
+            android:id="@+id/button_playPause"
             android:layout_weight="1"
             android:onClick="playPause"
             android:text="@string/action_pauseFile"
