--- a/android/radio/res/layout/uri_seek.xml
+++ b/android/radio/res/layout/uri_seek.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-  <TableLayout android:padding="25dp" android:stretchColumns="1">
+  <TableLayout
+    android:id="@+id/uri_seek_view"
+    android:padding="25dp"
+    android:stretchColumns="1"
+    >
+
     <SeekBar android:id="@+id/uri_seek_bar" />
 
     <TableRow>
